[package]
name = "ch3"
version = "0.0.1"
edition = "2021"
authors = ["YdrMaster <ydrml@hotmail.com>"]

[dependencies]
sbi-rt = { version = "0.0.2", features = ["legacy"] }
riscv = "0.9"

linker = { git = "https://github.com/shiwenlong12/linker"}
rcore-console = { git = "https://github.com/shiwenlong12/console"}
kernel-context = { git = "https://github.com/shiwenlong12/kernel-context"}
syscall = { git = "https://github.com/shiwenlong12/syscall", features = ["kernel"] }

[build-dependencies]
linker = { git = "https://github.com/shiwenlong12/linker"}

[features]
coop = []
