[package]
name = "ch4"
version = "0.0.1"
edition = "2021"
authors = ["YdrMaster <ydrml@hotmail.com>"]

[dependencies]
sbi-rt = { version = "0.0.2", features = ["legacy"] }
xmas-elf = "0.8.0"
riscv = "0.9"

linker = { git = "https://github.com/shiwenlong12/linker"}
rcore-console = { git = "https://github.com/shiwenlong12/console"}
kernel-context = { git = "https://github.com/shiwenlong12/kernel-context" , features = ["foreign"] }
kernel-alloc = { git = "https://github.com/shiwenlong12/kernel-alloc"}
kernel-vm = { git = "https://github.com/shiwenlong12/kernel-vm"}
syscall = { git = "https://github.com/shiwenlong12/syscall", features = ["kernel"] }

[build-dependencies]
linker = { git = "https://github.com/shiwenlong12/linker"}

