[package]
name = "ch6"
version = "0.0.1"
edition = "2021"
authors = ["tkf2019 <kaifu6821@qq.com>"]

[dependencies]
virtio-drivers = { git = "https://github.com/rcore-os/virtio-drivers", rev = "4ee80e5" }
sbi-rt = { version = "0.0.2", features = ["legacy"] }
xmas-elf = "0.8.0"
riscv = "0.9"
spin = "0.9.4"

linker = { git = "https://github.com/shiwenlong12/linker"}
rcore-console = { git = "https://github.com/shiwenlong12/console"}
kernel-context = { git = "https://github.com/shiwenlong12/kernel-context" , features = ["foreign"] }
kernel-alloc = { git = "https://github.com/shiwenlong12/kernel-alloc"}
kernel-vm = { git = "https://github.com/shiwenlong12/kernel-vm"}
syscall = { git = "https://github.com/shiwenlong12/syscall", features = ["kernel"] }
rcore-task-manage = { git = "https://github.com/shiwenlong12/task-manage", features = ["proc"] }
easy-fs = { git = "https://github.com/shiwenlong12/easy-fs"}
# easy-fs = { path = "../easy-fs" }

[build-dependencies]
linker = { git = "https://github.com/shiwenlong12/linker"}