[package]
name = "user_lib"
version = "0.0.1"
edition = "2021"
authors = ["YdrMaster <ydrml@hotmail.com>"]

[dependencies]
rcore-console = { git = "https://github.com/shiwenlong12/console"}
syscall = { git = "https://github.com/shiwenlong12/syscall", features = ["user"] }
customizable-buddy = "0.0.2"
